examples/Passing/Variables/increment.c
int main() {
    int b = 5;
    ++b;
    b ++;
    b++;
    return ++b;
}
