examples/Failing/Variables/fail_increment3.c
int main() {
    ++a;
    int a = 5;
    return a;
}
